@@ -2,9 +2,9 @@
 /*
  +-------------------------------------------------------------------------+
  | Roundcube Webmail IMAP Client                                           |
- | Version 0.3-20090702                                                    |
+ | Version 0.6                                                             |
  |                                                                         |
- | Copyright (C) 2005-2009, The Roundcube Dev Team                         |
+ | Copyright (C) 2005-2011, The Roundcube Dev Team                         |
  |                                                                         |
  | This program is free software; you can redistribute it and/or modify    |
  | it under the terms of the GNU General Public License version 2          |
@@ -64,3 +64,17 @@ function raise_error($p)
     $rci = rcube_install::get_instance();
     $rci->raise_error($p);
 }
+
+/**
+ * Local callback function for PEAR errors
+ */
+function rcube_pear_error($err)
+{
+    raise_error(array(
+        'code' => $err->getCode(),
+        'message' => $err->getMessage(),
+    ));
+}
+
+// set PEAR error handling (will also load the PEAR main class)
+PEAR::setErrorHandling(PEAR_ERROR_CALLBACK, 'rcube_pear_error');
