@@ -990,7 +990,9 @@ function rcube_webmail()
       // reset quicksearch
       case 'reset-search':
         var n, s = this.env.search_request || this.env.qsearch;
+
         this.reset_qsearch();
+        this.select_all_mode = false;
 
         if (s && this.env.mailbox)
           this.list_mailbox(this.env.mailbox);
@@ -1212,12 +1214,12 @@ function rcube_webmail()
   this.drag_menu = function(e, target)
   {
     var modkey = rcube_event.get_modifier(e),
-      menu = $('#'+this.gui_objects.message_dragmenu);
+      menu = this.gui_objects.message_dragmenu;
 
     if (menu && modkey == SHIFT_KEY && this.commands['copy']) {
       var pos = rcube_event.get_mouse_pos(e);
       this.env.drag_target = target;
-      menu.css({top: (pos.y-10)+'px', left: (pos.x-10)+'px'}).show();
+      $(menu).css({top: (pos.y-10)+'px', left: (pos.x-10)+'px'}).show();
       return true;
     }
 
@@ -1226,9 +1228,9 @@ function rcube_webmail()
 
   this.drag_menu_action = function(action)
   {
-    var menu = $('#'+this.gui_objects.message_dragmenu);
+    var menu = this.gui_objects.message_dragmenu;
     if (menu) {
-      menu.hide();
+      $(menu).hide();
     }
     this.command(action, this.env.drag_target);
     this.env.drag_target = null;
