@@ -399,6 +399,8 @@ $labels['typepager'] = 'Pager';
 $labels['typevideo'] = 'Wideo';
 $labels['typeassistant'] = 'Asystent';
 $labels['typehomepage'] = 'Strona domowa';
+$labels['typeblog'] = 'Blog';
+$labels['typeprofile'] = 'Profil';
 $labels['addfield'] = 'Dodaj pole...';
 $labels['personalinfo'] = 'Informacje osobiste';
 $labels['addphoto'] = 'Dodaj';
