@@ -1,6 +1,10 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fallback to mail_domain in LDAP variable replacements; add 'host' to 'user_create' hook arguments (#1488024)
+- Fixed wrong vCard type parameter mobile (#1488067)
+- Fixed vCard WORKFAX issue (#1488046)
+- Add vCard's Profile URL support (#1488062)
 - Fix imap_cache setting to values other than 'db' (#1488060)
 - Fix handling of attachments inside message/rfc822 parts (#1488026)
 - Make list of mimetypes that open in preview window configurable (#1487625)
